--- a/style.css
+++ b/style.css
@@ -4,8 +4,6 @@
   padding: 0;
 }
 
-
-
 :root {
   /* Colorschemes */
   --bg-color: #111111;
@@ -15,21 +13,31 @@
 
   /* Font variables */
 
---large-header: font-family: 'Playfair Display', serif;
---small-header: font-family: 'Poppins', sans-serif;
---paragraph-text: font-family: 'Poppins', sans-serif;
+  --large-header: "Playfair Display", serif;
+  --small-header: "Poppins", sans-serif;
+  --paragraph-text: "Poppins", sans-serif;
 }
 
 body {
-  
   color: var(--text-color);
   background-color: var(--bg-color);
   overflow: hidden;
 }
 
+.logo {
+  font-family: "Poppins", sans-serif;
+}
+
+.line {
+  width: 35px;
+  height: 3px;
+  background-color: white;
+  margin: 7px 0;
+}
+
 nav {
- padding-inline: 2rem;
- padding-top: 1rem;
+  padding-inline: 2rem;
+  padding-top: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -55,38 +63,36 @@ a {
 a:visited {
   text-decoration: none;
   color: var(--text-color);
-} 
-
+}
 
 .openMenu {
-  
   text-decoration: none;
   color: white;
   right: 100px;
- font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 2rem;
   font-weight: 500;
 }
 
 .openMenu:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .closeMenu {
-      position: absolute;
- 
+  position: absolute;
+
   text-decoration: none;
   color: white;
   top: 1rem;
   right: 3rem;
- font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 2rem;
   font-weight: 500;
   z-index: 99;
 }
 
 .closeMenu:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .menu {
@@ -120,18 +126,16 @@ a:visited {
   text-decoration: none;
   color: white;
   transition: 2s;
- font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 50px;
   text-transform: uppercase;
   font-weight: 500;
   mix-blend-mode: difference;
 }
 
-
 .deskTopNav {
-    display: none;
+  display: none;
 }
-
 
 /* Desktop query */
 
@@ -142,23 +146,16 @@ a:visited {
 
   .deskTopNav {
     display: flex;
-}
+  }
 
-.menuKnap {
+  .menuKnap {
     display: none;
-}
+  }
 
-.menu {
+  .menu {
     display: none;
-}
+  }
 
-
-.desktopUl {
- 
- 
-}
-
-
-
-
+  .desktopUl {
+  }
 }
