--- a/style.css
+++ b/style.css
@@ -21,7 +21,8 @@
 body {
   color: var(--text-color);
   background-color: var(--bg-color);
-  overflow: hidden;
+  overflow: scroll;
+  scroll-behavior: smooth;
 }
 
 .logo {
@@ -153,27 +154,54 @@ a:visited {
 
 .headingSmaller {
   font-family: "Playfair Display", serif;
-  font-size: 1rem;
+  font-size: 1.3rem;
   opacity: var(--medium-emph-text);
   letter-spacing: 1px;
+  line-height: 3rem;
 }
 
 .heroSubText {
-  max-width: 30ch;
+  max-width: 35ch;
   font-family: "Poppins", serif;
   margin-inline: 2rem;
-  margin-top: 2rem;
+  margin-top: 3rem;
   opacity: var(--medium-emph-text);
   font-size: 1rem;
   letter-spacing: 1px;
+  font-weight: 300;
+  margin-bottom: 12rem;
 }
 
 /* Desktop query */
 
+.projectWrapper {
+  margin-inline: 2rem;
+}
+
+.projectGrid {
+  display: flex;
+  flex-direction: column;
+}
+
+.singleProject {
+  max-width: 300px;
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 1rem;
+}
+
+.projectGrid img {
+  max-width: 85vw;
+}
+
+.projectCard {
+  filter: drop-shadow(0px 14px 13px #000);
+}
+
 @media (min-width: 992px) {
-  /* body {
+  main {
     margin-inline: 10rem;
-  } */
+  }
 
   .deskTopNav {
     display: flex;
