--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@
   --large-header: "Playfair Display", serif;
   --small-header: "Poppins", sans-serif;
   --paragraph-text: "Poppins", sans-serif;
+
+  --large-header-size: 48px;
+  --section-header-size: 32px;
+  --subsection-header-size: 24px;
+  --paragraph-size: 16px;
 }
 
 body {
@@ -178,6 +183,12 @@ a:visited {
   margin-inline: 2rem;
 }
 
+h2 {
+  font-family: "Playfair Display", serif;
+  font-size: var(--section-header-size);
+  font-weight: 500;
+  letter-spacing: 2px;
+}
 .projectGrid {
   display: flex;
   flex-direction: column;
@@ -192,6 +203,7 @@ a:visited {
 
 .projectGrid img {
   max-width: 85vw;
+  filter: drop-shadow(0px 14px 13px #000);
 }
 
 .projectCard {
