--- a/style.css
+++ b/style.css
@@ -8,19 +8,24 @@
   /* Colorschemes */
   --bg-color: #111111;
   --high-emph-text: 95%;
+  --subheader-text: 90%;
   --medium-emph-text: 60%;
   --text-color: white;
 
   /* Font variables */
 
   --large-header: "Playfair Display", serif;
+
   --small-header: "Poppins", sans-serif;
   --paragraph-text: "Poppins", sans-serif;
 
-  --large-header-size: 48px;
-  --section-header-size: 32px;
-  --subsection-header-size: 24px;
-  --paragraph-size: 16px;
+  --large-header-size: clamp(3rem, 1.6942rem + 5.0465vw, 5.75rem);
+  --heading-smaller: clamp(1.725rem, 0.8845rem + 1.296vw, 2rem);;
+  --section-header-size: clamp(2.3rem, 1.4502rem + 2.1248vw, 4rem);
+  --subsection-header-size: clamp(1.5rem, 1.0876rem + 1.5936vw, 2.5rem);
+  --h1-subtext: clamp(1rem, 0.7251rem + 1.0624vw, 1.2rem);
+  --paragraph-size: clamp(1rem, 0.9313rem + 0.2656vw, 1.25rem);
+  --navbar-size: clamp(1rem, 0.9313rem + 0.2656vw, 1.25rem);
 
   /* Layout */
 
@@ -38,7 +43,7 @@ body {
 
 .logo {
   font-family: "Poppins", sans-serif;
-  font-size: 1rem;
+  font-size: var(--navbar-size);
 }
 
 .line {
@@ -49,8 +54,8 @@ body {
 }
 
 nav {
-  padding-inline: 2rem;
-  padding-top: 1rem;
+  padding-inline: var(--mobile-margin);
+  padding-block: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -60,7 +65,9 @@ nav {
   background-color: var(--bg-color);
   top: 0;
 }
-
+.menuKnap {
+  padding-right: 1rem;
+}
 ul {
   list-style-type: none;
 }
@@ -172,18 +179,18 @@ a:visited {
 
 .heading1 {
   max-width: 15ch;
-  margin-inline: 2rem;
-  margin-top: 8rem;
+
+  margin-top: 5rem;
   font-family: "Playfair Display", serif;
-  font-size: 48px;
-  line-height: 50px;
+  font-size: var(--large-header-size);
+  line-height: 110%;
   letter-spacing: 4px;
   font-weight: 600;
 }
 
 .headingSmaller {
   font-family: "Playfair Display", serif;
-  font-size: 1.3rem;
+  font-size: var(--heading-smaller);
   opacity: var(--medium-emph-text);
   letter-spacing: 1px;
   line-height: 3rem;
@@ -192,10 +199,10 @@ a:visited {
 .heroSubText {
   max-width: 35ch;
   font-family: "Poppins", serif;
-  margin-inline: 2rem;
-  margin-top: 3rem;
+  
+  margin-top: 1rem;
   opacity: var(--medium-emph-text);
-  font-size: 1rem;
+  font-size: var(--h1-subtext);
   letter-spacing: 1px;
   font-weight: 300;
   margin-bottom: 12rem;
@@ -210,11 +217,12 @@ a:visited {
 }
 
 .projectWrapper h3 {
-  font-size: 1.2rem;
+  font-size: var(--subsection-header-size);
   letter-spacing: 2px;
   opacity: var(--high-emph-text);
   font-family: "Poppins", sans-serif;
   font-weight: 500;
+  line-height: rem;
 }
 
 .projectCardOverview {
@@ -235,7 +243,8 @@ h2 {
 p {
   font-family: "Poppins", sans-serif;
   font-weight: 300;
-  font-size: 0.9rem;
+  font-size: var(--paragraph-size);
+  opacity: var(--subheader-text);
 }
 .projectGrid {
   display: flex;
@@ -264,6 +273,7 @@ p {
 .headerCenterWrapper {
   display: flex;
   justify-content: center;
+  margin-inline: 2rem;
 }
 .singleProjectHeader {
   margin-top: 8rem;
@@ -274,7 +284,7 @@ p {
 
 .singleProjectHeader h1 {
   font-family: "Playfair Display", serif;
-  font-size: 48px;
+  font-size: 4rem;
   line-height: 50px;
   letter-spacing: 4px;
   font-weight: 600;
@@ -304,20 +314,28 @@ p {
 }
 
 .heroSectionSingleProject img {
-  width: 34rem;
+  width: 100%;
+  max-width: 1000px;
 }
 
-.projectIntroWrapper {
-  display: flex;
-  flex-direction: column;
+
+
+.gridContainer {
+    display: grid;
+  grid-template-columns: 1fr;
 }
 
 .projectOverviewWrapper {
-  margin-inline: 2rem;
+
   margin-bottom: 4rem;
+  max-width: 60ch;
+}
+.projectIntroWrapper {
+  margin-inline: var(--mobile-margin);
 }
 
-.projectOverviewWrapper h2 {
+
+.projectIntroWrapper h2 {
   font-family: "Playfair Display", serif;
   font-size: var(--section-header-size);
   font-weight: 500;
@@ -330,8 +348,8 @@ p {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr 1fr;
-  grid-column-gap: 100px;
-  margin-inline: 2rem;
+  
+  
 }
 
 .projectRecap > p {
@@ -345,15 +363,17 @@ p {
 .durationWrapper > p {
   font-family: "Poppins", serif;
   opacity: var(--medium-emph-text);
-  font-size: 0.875rem;
+
   letter-spacing: 1px;
   font-weight: 300;
 }
 
+
+
 .roleWrapper > p {
   font-family: "Poppins", serif;
   opacity: var(--medium-emph-text);
-  font-size: 0.875rem;
+
   letter-spacing: 1px;
   font-weight: 300;
   padding-block: 5px;
@@ -362,7 +382,7 @@ p {
 .toolsWrapper > p {
   font-family: "Poppins", serif;
   opacity: var(--medium-emph-text);
-  font-size: 0.875rem;
+ 
   letter-spacing: 1px;
   font-weight: 300;
   padding-block: 5px;
@@ -406,34 +426,52 @@ h4 {
   display: flex;
   flex-direction: column;
   margin-inline: 2rem;
+  max-width: 60ch;
 }
 
 .coreChallengeWrapper {
   margin-inline: 2rem;
   margin-top: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.challengeNumberFlexbox {
+  display: flex;
+  align-items: first baseline;
 }
 
 .coreChallengeWrapper p {
   padding-block: 0.5rem;
+  font-size: 0.875rem;
 }
 
 .coreChallengeWrapper span {
   font-size: 2rem;
   text-align: end;
   padding-right: 1rem;
-  padding-block: 10rem;
+  font-family: "Poppins", sans-serif;
+  padding-bottom: 2rem;
 }
 
 /* ------------------------------------Process section------------------------------ */
 
 .procesSection {
-  margin-left: 2rem;
-  margin-top: 5rem;
   overflow: hidden;
 }
 
 .procesSection p {
   max-width: 45ch;
+}
+
+.processGroupWrapper {
+  margin-left: 2rem;
+}
+.procesIntro {
+  margin-bottom: 4rem;
+  margin-left: 2rem;
+  margin-top: 5rem;
 }
 
 .numberFlexWrap {
@@ -458,14 +496,18 @@ h4 {
   position: relative;
   display: flex;
   flex-direction: column;
-  max-width: 35ch;
+  max-width: 30ch;
 }
 
 .textWrap p {
-  font-size: 0.875 rem;
-  max-width: 35ch;
+  font-size: var(--paragraph-size)
+  max-width: 50ch;
 }
 
+.gridWrap {
+  display: flex;
+  justify-content: center;
+}
 .solutionImageWrapper {
   display: grid;
   grid-template-columns: 1fr;
@@ -473,8 +515,19 @@ h4 {
 
 .solutionImageWrapper img {
   width: 100%;
-  max-width: 300px;
+  max-width: 500px;
   height: auto;
+  padding-block: 0.5rem;
+}
+
+.solutionSection {
+  margin-inline: 2rem;
+  margin-block: 4rem;
+  max-width: 60ch;
+}
+
+.intro {
+  padding-bottom: 2rem;
 }
 
 /* ---------------------------------Footer section ----------------------------------*/
@@ -506,6 +559,60 @@ h4 {
   margin-top: 1rem;
 }
 
+
+/* ---------------------------------tablet query---------------------------- */
+@media (min-width: 810px) {
+
+
+  nav {
+    padding-inline: var(--tablet-margin);
+  }
+  .frontHeroContainer {
+    margin-inline: var(--tablet-margin);
+  }
+  .singleProjectSubHeader {
+    max-width: 65ch;
+  }
+
+  .projectIntroWrapper {
+    margin-inline: var(--tablet-margin);
+  }
+
+
+
+  .theChallengeWrapper {
+    margin-inline: var(--tablet-margin);
+  }
+
+  .coreChallengeWrapper {
+    margin-inline: var(--tablet-margin);
+  }
+
+  .processWrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .procesIntro {
+    margin-inline: var(--tablet-margin);
+  }
+
+  .processGroupWrapper {
+    margin-inline: var(--tablet-margin);
+    flex: 2 0 25%;
+  }
+
+  .processCenterwrap {
+    display: flex;
+    justify-content: center;
+  }
+
+  .processWrapper > * {
+    max-width: 50ch;
+  }
+}
+
 /* ---------------------------------Desktop query ----------------------------------*/
 
 @media (min-width: 992px) {
@@ -513,6 +620,9 @@ h4 {
     /* margin-inline: 10rem; */
   }
 
+  nav {
+    padding-inline: var(--desktop-margin);
+  }
   .deskTopNav {
     display: flex;
     flex-direction: row;
@@ -570,6 +680,16 @@ h4 {
     color: white;
   }
 
+
+   .frontHeroContainer {
+    margin-inline: var(--desktop-margin);
+  }
+  
+  .heroSubText {
+    max-width: 50ch;
+    margin-top: 2rem;
+  }
+
   .singleProject {
     display: grid;
     grid-template-columns: 2fr;
@@ -584,4 +704,42 @@ h4 {
     grid-column: 2;
     width: 50ch;
   }
+
+  .projectIntroWrapper {
+    margin-inline: var(--desktop-margin);
+  }
+
+  .projectRecap  {
+    
+  }
+
+
+
+
+
+}
+
+@media (min-width: 1400px) {
+
+
+nav {
+    padding-inline: var(--desktop-margin);
+  }
+
+
+
+
+.projectIntroWrapper {
+  grid-template-columns: 2fr 1fr;
+  margin-inline: var(--desktop-margin);
+}
+
+.projectOverviewWrapper {
+grid-column: 1;}
+
+.projectRecap {
+  grid-column: 2
+  ;
+}
+
 }
