--- a/style.css
+++ b/style.css
@@ -21,10 +21,10 @@
 
   --large-header-size: clamp(3rem, 1.6942rem + 5.0465vw, 5.75rem);
   --heading-smaller: clamp(1.725rem, 0.8845rem + 1.296vw, 2rem);;
-  --section-header-size: clamp(2.3rem, 1.4502rem + 2.1248vw, 4rem);
+  --section-header-size: clamp(2.3rem, 1.4502rem + 2.1248vw, 3rem);
   --subsection-header-size: clamp(1.5rem, 1.0876rem + 1.5936vw, 2.5rem);
   --h1-subtext: clamp(1rem, 0.7251rem + 1.0624vw, 1.2rem);
-  --paragraph-size: clamp(1rem, 0.9313rem + 0.2656vw, 1.25rem);
+  --paragraph-size: clamp(1rem, 0.9313rem + 0.2256vw, 1.05rem);
   --navbar-size: clamp(1rem, 0.9313rem + 0.2656vw, 1.25rem);
 
   /* Layout */
@@ -39,6 +39,7 @@ body {
   background-color: var(--bg-color);
   overflow: scroll;
   scroll-behavior: smooth;
+
 }
 
 .logo {
@@ -60,7 +61,7 @@ nav {
   align-items: center;
   justify-content: space-between;
   position: fixed;
-  min-width: 100vw;
+  width: 100vw;
   z-index: 9999;
   background-color: var(--bg-color);
   top: 0;
@@ -300,13 +301,13 @@ p {
   font-size: 1rem;
   letter-spacing: 1px;
   font-weight: 300;
-  margin-bottom: 6rem;
+  margin-bottom: 5rem;
 }
 
 .heroSectionSingleProject {
-  height: 40vh;
+  height: 40%;
   overflow: hidden;
-
+width: 100%;
   background-color: #7e8c73;
   display: flex;
   justify-content: center;
@@ -315,14 +316,14 @@ p {
 
 .heroSectionSingleProject img {
   width: 100%;
-  max-width: 1000px;
+  max-width: 500px;
 }
 
 
 
 .gridContainer {
     display: grid;
-  grid-template-columns: 1fr;
+grid-template-columns: 1fr ;
 }
 
 .projectOverviewWrapper {
@@ -423,14 +424,12 @@ h4 {
 }
 
 .theChallengeWrapper {
-  display: flex;
-  flex-direction: column;
-  margin-inline: 2rem;
+ 
   max-width: 60ch;
 }
 
 .coreChallengeWrapper {
-  margin-inline: 2rem;
+  
   margin-top: 5rem;
   display: flex;
   flex-direction: column;
@@ -459,6 +458,7 @@ h4 {
 
 .procesSection {
   overflow: hidden;
+  margin-inline: var(--mobile-margin);
 }
 
 .procesSection p {
@@ -466,12 +466,12 @@ h4 {
 }
 
 .processGroupWrapper {
-  margin-left: 2rem;
+  
 }
 .procesIntro {
   margin-bottom: 4rem;
-  margin-left: 2rem;
-  margin-top: 5rem;
+  margin-top: 6rem;
+
 }
 
 .numberFlexWrap {
@@ -511,24 +511,42 @@ h4 {
 .solutionImageWrapper {
   display: grid;
   grid-template-columns: 1fr;
+  justify-content: center;
+  grid-row-gap: 10px;
 }
 
 .solutionImageWrapper img {
   width: 100%;
   max-width: 500px;
   height: auto;
-  padding-block: 0.5rem;
+  /* padding-block: 0.5rem; */
 }
 
 .solutionSection {
-  margin-inline: 2rem;
+  
   margin-block: 4rem;
-  max-width: 60ch;
+  /* max-width: 60ch; */
 }
+
+
 
 .intro {
   padding-bottom: 2rem;
+  
 }
+
+ .challengeSection{
+  margin-inline: var(--mobile-margin);
+}
+
+ .challengeSection{
+  margin-top: 6rem;
+
+}
+
+
+
+
 
 /* ---------------------------------Footer section ----------------------------------*/
 
@@ -559,10 +577,28 @@ h4 {
   margin-top: 1rem;
 }
 
+.processCenterwrap {
+  display: flex;
+ 
+}
+
+@media (min-width: 610px) {
+
+.processCenterwrap {
+  display: flex;
+  justify-content: center;
+}
+
+}
+
+
 
 /* ---------------------------------tablet query---------------------------- */
 @media (min-width: 810px) {
 
+.intro {
+  padding-bottom: 4rem;
+}
 
   nav {
     padding-inline: var(--tablet-margin);
@@ -577,40 +613,64 @@ h4 {
   .projectIntroWrapper {
     margin-inline: var(--tablet-margin);
   }
+.heroSectionSingleProject {
+  height: 50vh;
+}
 
-
+  .heroSectionSingleProject img {
+  width: 100%;
+  max-width: 800px;
+}
 
   .theChallengeWrapper {
-    margin-inline: var(--tablet-margin);
+ 
+    
   }
 
+
+  .challengeContainer {
+      display: grid;
+grid-template-columns: 1fr ;
+  }
+  
+
+
   .coreChallengeWrapper {
-    margin-inline: var(--tablet-margin);
+
   }
 
   .processWrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 100px;
   }
 
-  .procesIntro {
-    margin-inline: var(--tablet-margin);
-  }
+.procesSection {
+  overflow: hidden;
+  margin-inline: var(--tablet-margin);
+}
 
   .processGroupWrapper {
-    margin-inline: var(--tablet-margin);
+   
     flex: 2 0 25%;
   }
 
   .processCenterwrap {
     display: flex;
-    justify-content: center;
+    
   }
 
   .processWrapper > * {
     max-width: 50ch;
   }
+
+  .challengeSection{
+  margin-inline: var(--tablet-margin);
+}
+
+
+
+
 }
 
 /* ---------------------------------Desktop query ----------------------------------*/
@@ -633,6 +693,9 @@ h4 {
     display: none;
   }
 
+  .intro {
+    padding-bottom: 6rem;
+  }
   .menu {
     display: none;
   }
@@ -690,6 +753,17 @@ h4 {
     margin-top: 2rem;
   }
 
+  .heroSectionSingleProject {
+  height: 60vh;
+  overflow: hidden;
+
+  background-color: #7e8c73;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
   .singleProject {
     display: grid;
     grid-template-columns: 2fr;
@@ -705,6 +779,21 @@ h4 {
     width: 50ch;
   }
 
+  .procesSection {
+  overflow: hidden;
+  margin-inline: var(--desktop-margin);
+  margin-top: 7rem;
+}
+
+.gridContainer {
+     display: grid;
+grid-template-columns: 1fr ;
+
+}
+
+.challengeSection{
+  margin-inline: var(--desktop-margin);
+}
   .projectIntroWrapper {
     margin-inline: var(--desktop-margin);
   }
@@ -713,11 +802,83 @@ h4 {
     
   }
 
+  .theChallengeWrapper {
+    
+    
+  }
 
 
+  .processGroupWrapper {
+  margin-left: 2rem;
+  padding-bottom: 2rem;
+}
 
+  .challengeContainer {
+      display: grid;
+grid-template-columns: 1fr;
+  }
+  .challengeSection {
+    margin-top: 7rem;
+  }
+  
+
+
+  .coreChallengeWrapper {
+
+    margin-top: 0;
+  }
+
+
+ .processWrapper {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 150px;
+  }
+
+
+.solutionImageWrapper {
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.solutionImageWrapper img {
+  max-width: 1200px;
+  object-fit: cover;
+  
+}
+
+
+.img1 {
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.img2 {
+  grid-column: 1;
+  grid-row: 3;
+}
+
+.img3 {
+  grid-column: 1;
+  grid-row: 4;
+}
+
+.img4 {
+  grid-column: 2;
+  grid-row: 3/5;
+}
+
+.gridWrap {
+  display: flex;
+  justify-content: center;
+  margin-inline: 10rem;
+}
 
 }
+
+
+
 
 @media (min-width: 1400px) {
 
@@ -738,8 +899,45 @@ nav {
 grid-column: 1;}
 
 .projectRecap {
-  grid-column: 2
-  ;
+  grid-column: 2;
 }
 
+.projectRecap {
+  grid-template-columns: 1fr 1fr;
+ grid-column-gap: 100px;
+}
+
+
+.gridContainer {
+  grid-column-gap: 100px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.challengeSection{
+  margin-inline: var(--desktop-margin);
+}
+
+   .challengeContainer {
+      display: grid;
+grid-template-columns: 1fr 1fr;
+grid-column-gap: 100px;
+  }
+
+}
+
+@media (min-width: 1920px){
+
+  body {
+max-width: 1920px; 
+	margin: 0 auto !important; 
+	float: none !important; 
+  }
+
+  body nav {
+    max-width: 1920px;
+  }
+
+  header {
+    max-width: 1920px;
+  }
 }
