--- a/style.css
+++ b/style.css
@@ -253,6 +253,7 @@ p {
   font-weight: 300;
   font-size: var(--paragraph-size);
   opacity: var(--subheader-text);
+  line-height: 30px;
 }
 .projectGrid {
   display: flex;
@@ -491,6 +492,7 @@ h4 {
 .textWrap span {
   font-size: 2rem;
   font-family: "Poppins", sans-serif;
+  background-color: var(--bg-color);
 }
 
 .numberFlexWrap {
@@ -623,6 +625,10 @@ h4 {
     max-width: 800px;
   }
 
+  .ungdomsbyenHeader img {
+    max-width: 600px;
+  }
+
   .projectWrapper {
     margin-inline: var(--tablet-margin);
     padding-top: 0.5rem;
@@ -664,6 +670,7 @@ h4 {
 
   .processCenterwrap {
     display: flex;
+    justify-content: center;
   }
 
   .processWrapper > * {
@@ -835,7 +842,14 @@ h4 {
     align-items: center;
   }
 
-  .procesContainer {
+  main .ungdomsbyenHeader {
+    height: 60vh;
+    overflow: hidden;
+
+    background-color: #ffc502;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .singleProject {
@@ -952,9 +966,9 @@ h4 {
     padding-inline: var(--desktop-margin);
   }
 
-  .processCenterwrap {
+  /* .processCenterwrap {
     justify-content: center;
-  }
+  } */
 
   .projectIntroWrapper {
     grid-template-columns: 2fr 1fr;
@@ -1017,13 +1031,13 @@ h4 {
 
 .aboutIntroSection {
   margin-inline: var(--mobile-margin);
-  margin-top: 7rem;
+  margin-top: 5rem;
 }
 
 .aboutIntroSection h1 {
   font-size: var(--large-header-size);
   letter-spacing: 2px;
-  padding-bottom: 2rem;
+  padding-bottom: 1rem;
 }
 
 .aboutIntro img {
@@ -1053,7 +1067,8 @@ h4 {
 }
 
 .timeline {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr;
 }
 
 .timelineWrapper {
@@ -1072,14 +1087,33 @@ h4 {
   background: white;
 }  */
 
+.timelineDraw {
+  position: relative;
+  max-width: 1200px;
+
+  margin: 0 auto;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timelineDraw::after {
+  content: "";
+  position: absolute;
+  width: 3px;
+  height: 6rem;
+  background-color: white;
+  top: 15px;
+  bottom: 0;
+  left: 25%;
+  margin-left: -3px;
+}
+
 .resume {
-  overflow: hidden;
   margin-inline: var(--mobile-margin);
   margin-top: 4rem;
 }
 
 .educationContainer {
-  top: -2rem;
+  top: -2.6rem;
   left: 8rem;
   overflow: hidden;
 }
@@ -1100,6 +1134,34 @@ h4 {
   margin: 0 0 0 30px;
   color: white;
 } */
+h3 {
+  font-size: var(--subsection-header-size);
+  letter-spacing: 2px;
+  opacity: var(--high-emph-text);
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  line-height: rem;
+}
+
+.singleCompentencieConatiner p {
+  opacity: var(--medium-emph-text);
+  padding-top: 0.5rem;
+}
+
+.Competencies h3 {
+  padding-bottom: 2rem;
+  margin-top: 1.2rem;
+}
+
+.competenciesContainer {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.singleCompentencieConatiner {
+  flex-basis: 185px;
+  margin-top: 2rem;
+}
 
 @media (min-width: 610px) {
   .aboutIntroSection {
@@ -1144,15 +1206,44 @@ h4 {
   }
   .aboutIntro img {
     justify-self: center;
-    padding-top: 10rem;
+    padding-top: 4rem;
   }
 
   .resume {
     margin-inline: var(--desktop-margin);
   }
 
+  .pdfResume {
+    font-size: 1.3rem;
+    font-weight: 500;
+    transition: 0.5s ease all 0.3s;
+  }
+
+  .pdfResume:hover,
+  .pdfResume:focus {
+    transform: translateY(1rem);
+    transition: 0.5s ease all 0.3s;
+  }
+
   .educationContainer {
     left: 9rem;
+  }
+
+  .competenciesContainer {
+    display: flex;
+    justify-content: flex-start;
+  }
+  .singleCompentencieConatiner {
+    margin-right: 2rem;
+  }
+
+  .singleCompentencieConatiner {
+    margin-top: 1rem;
+  }
+
+  .Competencies {
+    margin-top: 8rem;
+    margin-bottom: 8rem;
   }
 }
 
@@ -1160,5 +1251,10 @@ h4 {
   .aboutIntro {
     grid-template-columns: 1fr 1fr;
     gap: 100px;
+  }
+
+  .timeline {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
 }
