--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
   /* Colorschemes */
-  --bg-color: #111111;
+  --bg-color: #0d0d0d;
   --high-emph-text: 98%;
   --subheader-text: 95%;
   --medium-emph-text: 60%;
@@ -20,7 +20,7 @@
   --paragraph-text: "Poppins", sans-serif;
 
   --large-header-size: clamp(3rem, 1.6942rem + 5.0465vw, 5.75rem);
-  --heading-smaller: clamp(1.725rem, 0.8845rem + 1.296vw, 2rem);
+  --heading-smaller: clamp(1.725rem, 0.8845rem + 1.096vw, 2rem);
   --section-header-size: clamp(2.3rem, 1.4502rem + 2.1248vw, 3rem);
   --subsection-header-size: clamp(1.5rem, 1.0876rem + 1.1936vw, 2rem);
   --h1-subtext: clamp(1rem, 0.7251rem + 1.0624vw, 1.2rem);
@@ -37,7 +37,7 @@
 body {
   color: var(--text-color);
   background-color: var(--bg-color);
-  overflow: scroll;
+  /* overflow: scroll; */
   scroll-behavior: smooth;
 }
 
@@ -124,7 +124,7 @@ button {
   left: 0;
   width: 100%;
   height: 100vh;
-  background-color: var(--bg-color);
+  background-color: #090909;
   transform: translateX(-100%);
 }
 .menu .button {
@@ -208,7 +208,6 @@ button {
   font-size: var(--h1-subtext);
   letter-spacing: 1px;
   font-weight: 300;
-  margin-bottom: 12rem;
 }
 
 .scrollDownIcon {
@@ -260,6 +259,15 @@ p {
   flex-direction: column;
 }
 
+.scrollSection {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: "Poppins", sans-serif;
+  font-size: var(--paragraph-size);
+}
+
 .singleProject {
   max-width: 300px;
   display: grid;
@@ -304,6 +312,23 @@ p {
   text-align: center;
 }
 
+.abouth1 h1 {
+  font-family: "Playfair Display", serif;
+  font-size: 4rem;
+  line-height: 50px;
+  letter-spacing: 4px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.moonchallenge h1 {
+  line-height: 75px;
+}
+
+.HeaderSubtext {
+  align-self: center;
+}
+
 .singleProjectSubHeader {
   max-width: 40ch;
   font-family: "Poppins", serif;
@@ -326,9 +351,33 @@ p {
   align-items: center;
 }
 
+.frogalypseHeader {
+  height: 40%;
+  overflow: hidden;
+  width: 100%;
+  background-color: #7e8c7300;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.moonHeader {
+  height: 40%;
+  overflow: hidden;
+  width: 100%;
+  background-color: #171717;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .heroSectionSingleProject img {
   width: 100%;
   max-width: 500px;
+}
+
+.frogalypseHeader img {
+  max-width: 400px;
 }
 
 .gridContainer {
@@ -399,6 +448,44 @@ p {
   padding-block: 5px;
 }
 
+.introsolutionMoon p {
+  padding-bottom: 2rem;
+}
+
+.prototypeButton {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+/* button::after {
+  top: 65%;
+  height: 2px;
+  width: 0%;
+  left: 5%;
+  background-color: rgba(255, 245, 245, 0.6);
+  transition: 0.5s ease all 0.3s;
+}
+
+button:hover::after {
+  width: 90%;
+  transition: 0.3s ease all;
+} */
+
+Button a {
+  /* top: 65%;
+  height: 2px;
+  width: 0%;
+  left: 5%;
+  background-color: rgba(255, 245, 245, 0.6);
+  transition: 0.5s ease all 0.3s; */
+}
+
+Button a:hover,
+Button a:focus {
+  text-decoration: underline;
+}
+
 .durationWrapper {
   grid-column: 1;
   grid-row: 1;
@@ -460,6 +547,14 @@ h4 {
   padding-right: 1rem;
   font-family: "Poppins", sans-serif;
   padding-bottom: 2rem;
+}
+
+.moonSolution {
+  margin-inline: var(--mobile-margin);
+}
+
+.moonSolution p {
+  max-width: 50ch;
 }
 
 /* ------------------------------------Process section------------------------------ */
@@ -585,6 +680,7 @@ h4 {
 
 .frontHeroContainer {
   margin-inline: var(--mobile-margin);
+  margin-bottom: 12rem;
 }
 
 @media (min-width: 610px) {
@@ -606,7 +702,7 @@ h4 {
     margin-inline: var(--tablet-margin);
   }
   .singleProjectSubHeader {
-    max-width: 65ch;
+    max-width: 55ch;
   }
 
   .singleProject img {
@@ -618,6 +714,15 @@ h4 {
   }
   .heroSectionSingleProject {
     height: 50vh;
+  }
+
+  .frogalypseHeader {
+    height: 50vh;
+  }
+
+  .frogalypseHeader img {
+    width: 100%;
+    max-width: 800px;
   }
 
   .heroSectionSingleProject img {
@@ -680,6 +785,10 @@ h4 {
   .challengeSection {
     margin-inline: var(--tablet-margin);
   }
+
+  .moonSolution {
+    margin-inline: var(--tablet-margin);
+  }
 }
 
 /* ---------------------------------Desktop query ----------------------------------*/
@@ -731,7 +840,7 @@ h4 {
   .circle {
     height: 40px;
     width: 40px;
-    background-color: rgba(255, 255, 255, 0.168);
+    background-color: rgba(255, 255, 255, 0.075);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -827,6 +936,10 @@ h4 {
     margin-inline: var(--desktop-margin);
   }
 
+  .gameImage {
+    margin-bottom: -2rem;
+  }
+
   .heroSubText {
     max-width: 50ch;
     margin-top: 2rem;
@@ -850,6 +963,21 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
+  }
+
+  .moonHeader {
+    height: 60vh;
+    overflow: hidden;
+
+    background-color: #171717;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .moonHeader img {
+    width: 100%;
+    max-width: 600px;
   }
 
   .singleProject {
@@ -888,10 +1016,8 @@ h4 {
     margin-inline: var(--desktop-margin);
   }
 
-  .projectRecap {
-  }
-
-  .theChallengeWrapper {
+  .moonSolution {
+    margin-inline: var(--desktop-margin);
   }
 
   .textWrap span {
@@ -942,6 +1068,11 @@ h4 {
   .img2 {
     grid-column: 1;
     grid-row: 3;
+  }
+
+  .imgmoonproces {
+    grid-column: 1/3;
+    grid-row: 3/5;
   }
 
   .img3 {
@@ -1009,6 +1140,10 @@ h4 {
     grid-column-gap: 150px;
     margin-left: -7rem;
   }
+
+  .gameImages {
+    max-width: 800px;
+  }
 }
 
 @media (min-width: 1920px) {
@@ -1052,10 +1187,15 @@ h4 {
   padding-block: 1rem;
   font-weight: 300;
   max-width: 40ch;
-  line-height: 2rem;
+  line-height: 1.9rem;
 }
 
 .aboutIntro span {
+  opacity: 100%;
+  font-weight: 600;
+}
+
+.projectOverviewWrapper span {
   opacity: 100%;
   font-weight: 600;
 }
@@ -1213,15 +1353,25 @@ h3 {
     margin-inline: var(--desktop-margin);
   }
 
-  .pdfResume {
+  .pdfResume button {
     font-size: 1.3rem;
-    font-weight: 500;
-    transition: 0.5s ease all 0.3s;
+    font-weight: 400;
+    margin-top: 1rem;
   }
 
-  .pdfResume:hover,
-  .pdfResume:focus {
-    transform: translateY(1rem);
+  .pdfResume span::after {
+    content: "";
+    transition: 0.5s ease all 0.3s;
+    padding-bottom: 1rem;
+    top: 65%;
+    height: 2px;
+    width: 0%;
+    left: 5%;
+  }
+
+  .pdfResume span:hover::after,
+  .pdfResume span:focus::after {
+    width: 90%;
     transition: 0.5s ease all 0.3s;
   }
 
