--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 :root {
   /* Colorschemes */
-  --bg-color: #0d0d0d;
+  --bg-color: #141414;
   --high-emph-text: 98%;
   --subheader-text: 95%;
   --medium-emph-text: 60%;
@@ -98,7 +98,7 @@ a:visited {
   cursor: pointer;
 }
 
-button {
+.frontButton {
   display: none;
 }
 .closeMenu {
@@ -318,8 +318,19 @@ p {
   line-height: 50px;
   letter-spacing: 4px;
   font-weight: 600;
+  padding-bottom: 2rem;
 }
-
+.circle {
+  height: 40px;
+  width: 40px;
+  background-color: rgba(255, 255, 255, 0.075);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+  transition: all 0.2s;
+}
 .moonchallenge h1 {
   line-height: 75px;
 }
@@ -470,20 +481,6 @@ button:hover::after {
   width: 90%;
   transition: 0.3s ease all;
 } */
-
-Button a {
-  /* top: 65%;
-  height: 2px;
-  width: 0%;
-  left: 5%;
-  background-color: rgba(255, 245, 245, 0.6);
-  transition: 0.5s ease all 0.3s; */
-}
-
-Button a:hover,
-Button a:focus {
-  text-decoration: underline;
-}
 
 .durationWrapper {
   grid-column: 1;
@@ -816,7 +813,7 @@ h4 {
     justify-content: space-between;
   }
 
-  button {
+  .frontButton {
     display: flex;
     background-color: var(--bg-color);
     border: none;
@@ -830,9 +827,10 @@ h4 {
     position: relative;
     overflow: hidden;
     align-items: center;
+    transition: all 1s;
   }
 
-  button svg {
+  .frontButton svg {
     margin-left: 4px;
   }
 
@@ -845,29 +843,29 @@ h4 {
     justify-content: center;
     align-items: center;
     margin-left: 10px;
-    transition: all 0.3s;
+    transition: all 0.2s;
   }
 
-  .circle svg {
-    margin-left: -1px;
-    transition: all 0.3s;
+  .buttonSpan {
+    position: relative;
   }
 
-  .circle svg:before {
+  .buttonSpan::before {
     content: "";
     position: absolute;
-    width: 0;
-    background: #fff;
-    left: 45%;
+    transition: 0.2s ease all 0.3s;
+    top: 99%;
     height: 2px;
-    bottom: 5px;
-    transition: all 0.3s;
-    opacity: 0.7;
+    width: 0%;
+    left: 0;
+    background-color: white;
   }
 
-  button:hover:before {
+  .buttonSpan:hover::before {
     width: 100%;
-    left: 0;
+  }
+
+  .frontButton span::before {
   }
 
   .intro {
@@ -1165,13 +1163,13 @@ h4 {
 
 .aboutIntroSection {
   margin-inline: var(--mobile-margin);
-  margin-top: 5rem;
+  margin-top: 6rem;
 }
 
 .aboutIntroSection h1 {
-  font-size: var(--large-header-size);
+  font-size: var(--section-header-size);
   letter-spacing: 2px;
-  padding-bottom: 1rem;
+  padding-bottom: 2rem;
 }
 
 .aboutIntro img {
@@ -1302,6 +1300,44 @@ h3 {
   margin-top: 2rem;
 }
 
+.protoButton {
+  display: flex;
+  background-color: var(--bg-color);
+  border: none;
+  color: white;
+  font-family: var(--paragraph-text);
+  font-size: var(--paragraph-size);
+  text-align: center;
+  /* padding: 15px 40px; */
+  cursor: pointer;
+  letter-spacing: 2px;
+  position: relative;
+  overflow: hidden;
+  align-items: center;
+  transition: all 1s;
+}
+
+.protoButton span {
+  font-size: 1.1rem;
+  font-weight: 400;
+
+  position: relative;
+  transition: all 1s;
+  letter-spacing: 3px;
+}
+
+.protoButton span::before {
+  content: "";
+  position: absolute;
+  transition: 0.2s ease all 0.3s;
+
+  top: 99%;
+  height: 1px;
+  width: 100%;
+  left: 0;
+  background-color: white;
+}
+
 @media (min-width: 610px) {
   .aboutIntroSection {
     margin-inline: var(--tablet-margin);
@@ -1339,40 +1375,28 @@ h3 {
 
   .aboutText {
     grid-column: 1;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
   .profileImage {
     grid-column: 2;
   }
   .aboutIntro img {
     justify-self: center;
-    padding-top: 4rem;
   }
 
   .resume {
     margin-inline: var(--desktop-margin);
   }
 
-  .pdfResume button {
-    font-size: 1.3rem;
-    font-weight: 400;
-    margin-top: 1rem;
-  }
-
-  .pdfResume span::after {
-    content: "";
-    transition: 0.5s ease all 0.3s;
-    padding-bottom: 1rem;
-    top: 65%;
-    height: 2px;
-    width: 0%;
-    left: 5%;
-  }
-
-  .pdfResume span:hover::after,
-  .pdfResume span:focus::after {
-    width: 90%;
-    transition: 0.5s ease all 0.3s;
-  }
+  /* 
+  .protoButton span:hover::before,
+  .protoButton span:focus::before {
+    width: 100%;
+    transition: 0.2s ease all 0.3s;
+  } */
 
   .educationContainer {
     left: 9rem;
