--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
   --paragraph-text: "Poppins", sans-serif;
 
   --large-header-size: clamp(3rem, 1.6942rem + 5.0465vw, 5.75rem);
-  --heading-smaller: clamp(1.725rem, 0.8845rem + 1.096vw, 2rem);
+  --heading-smaller: clamp(1.125rem, 0.8845rem + 1.096vw, 2rem);
   --section-header-size: clamp(2.3rem, 1.4502rem + 2.1248vw, 3rem);
   --subsection-header-size: clamp(1.5rem, 1.0876rem + 1.1936vw, 2rem);
   --h1-subtext: clamp(1rem, 0.7251rem + 1.0624vw, 1.2rem);
@@ -269,11 +269,10 @@ p {
 }
 
 .singleProject {
-  max-width: 300px;
   display: grid;
   grid-template-columns: 1fr;
   gap: 1rem;
-  margin-block: 2rem;
+  margin-block: 3rem;
 }
 
 .projectGrid img {
@@ -300,7 +299,9 @@ p {
 }
 
 .singleProject img {
-  max-width: 380px;
+  max-width: 100%;
+  height: auto;
+  padding-bottom: 0.5rem;
 }
 
 .singleProjectHeader h1 {
@@ -709,11 +710,11 @@ h4 {
     margin-inline: var(--tablet-margin);
   }
   .heroSectionSingleProject {
-    height: 50vh;
+    /* height: 50vh; */
   }
 
   .frogalypseHeader {
-    height: 50vh;
+    /* height: 50vh; */
   }
 
   .frogalypseHeader img {
@@ -853,8 +854,8 @@ h4 {
   .buttonSpan::before {
     content: "";
     position: absolute;
-    transition: 0.2s ease all 0.3s;
-    top: 99%;
+    transition: 0.2s ease all 0.1s;
+    top: 100%;
     height: 2px;
     width: 0%;
     left: 0;
@@ -943,7 +944,7 @@ h4 {
   }
 
   .heroSectionSingleProject {
-    height: 60vh;
+    /* height: 60vh; */
     overflow: hidden;
 
     background-color: #7e8c73;
@@ -953,7 +954,7 @@ h4 {
   }
 
   main .ungdomsbyenHeader {
-    height: 60vh;
+    /* height: 60vh; */
     overflow: hidden;
 
     background-color: #ffc502;
@@ -975,24 +976,6 @@ h4 {
   .moonHeader img {
     width: 100%;
     max-width: 600px;
-  }
-
-  .singleProject {
-    display: grid;
-    grid-template-columns: 2fr;
-    gap: 10rem;
-    margin-block: 3rem;
-  }
-
-  .projectImage {
-    grid-column: 1;
-  }
-  .projectCardWrapper {
-    grid-column: 2;
-    width: 50ch;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
   }
 
   .procesSection {
@@ -1141,6 +1124,24 @@ h4 {
   .gameImages {
     max-width: 800px;
   }
+
+  .singleProject {
+    display: grid;
+    grid-template-columns: 2fr;
+    gap: 10rem;
+    margin-block: 3rem;
+  }
+
+  .projectImage {
+    grid-column: 1;
+  }
+  .projectCardWrapper {
+    grid-column: 2;
+    width: 50ch;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 @media (min-width: 1920px) {
@@ -1156,6 +1157,10 @@ h4 {
 
   header {
     max-width: 1920px;
+  }
+
+  .heroSectionSingleProject {
+    max-height: 400px;
   }
 }
 
